--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,7 +1,7 @@
 /* Footer.css */
 .footer {
-    background-color: #111827;
-    color: #d1d5db;
+    background-color: #004d40;
+    color: white;
     padding: 40px 20px;
     font-family: Arial, sans-serif;
   }
